--- a/.github/workflows/python-install.yml
+++ b/.github/workflows/python-install.yml
@@ -23,3 +23,6 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install poetry
           poetry install
+      - name: Build
+        run: |
+          poetry build
