refactored api client

--- a/.github/workflows/python-install.yml
+++ b/.github/workflows/python-install.yml
@@ -23,6 +23,9 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install poetry
           poetry install
+      - name: Test with pytest
+        run: |
+          pytest --cov=giskard tests --cov-report=xml
       - name: Build
         run: |
           poetry build
