--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,18 +40,18 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4"
 importlib_metadata = { version = "^4.11.4" }
-pandas = ">=1.3.5"
-numpy = ">=1.21.1"
-scikit-learn = ">=1.0.2"
-pydantic = ">=1.9.1"
+pandas = "^1.3.5"
+numpy = "^1.21.1"
+scikit-learn = "^1.0.2"
+pydantic = "^1.9.1"
 typing-extensions = "^3.10.0.2"
-cloudpickle = ">=2.1.0"
-api-client = "^1.3.1"
+cloudpickle = "^2.1.0"
 zstandard = "^0.15.2"
 python-dotenv = "^0.17.1"
 jupyter-http-over-ws = "^0.0.8"
 ipywidgets = "^7.7.0"
 types-requests = "^2.27.30"
+requests-toolbelt = "^0.9.1"
 
 [tool.poetry.dev-dependencies]
 darglint = "^1.8.1"
@@ -69,6 +69,8 @@ pre-commit = "^2.19.0"
 flake8 = "^3.9.2"
 jupyter = "^1.0.0"
 jupyterlab = "^3.4.2"
+httpretty = "^1.1.4"
+pytest-cov = "^3.0.0"
 
 [tool.black]
 # https://github.com/psf/black
