--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "giskard"
-version = "1.0.0"
+version = "1.0.0a1"
 description = "Inspect your AI models visually, find bugs, give feedback 🕵️‍♀️ 💬"
 readme = "README.md"
 authors = ["Giskard AI <hello@giskard.ai>"]
@@ -39,38 +39,38 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4"
-importlib_metadata = { version = "^4.11.4" }
-pandas = "^1.3.5"
-numpy = "^1.21.1"
-scikit-learn = "^1.0.2"
-pydantic = "^1.9.1"
-typing-extensions = "^3.10.0.2"
 cloudpickle = "^2.1.0"
-zstandard = "^0.15.2"
-python-dotenv = "^0.17.1"
-jupyter-http-over-ws = "^0.0.8"
+importlib_metadata = { version = "^4.11.4" }
 ipywidgets = "^7.7.0"
-types-requests = "^2.27.30"
+jupyter-http-over-ws = "^0.0.8"
+numpy = "^1.21.1"
+pandas = "^1.3.5"
+pydantic = "^1.9.1"
+python-dotenv = "^0.17.1"
 requests-toolbelt = "^0.9.1"
+scikit-learn = "^1.0.2"
+types-requests = "^2.27.30"
+typing-extensions = "^3.10.0.2"
+zstandard = "^0.15.2"
 
 [tool.poetry.dev-dependencies]
-darglint = "^1.8.1"
-isort = { extras = ["colors"], version = "^5.10.1" }
-pyupgrade = "^2.32.1"
-black = "^21.12b0"
-mypy = "^0.910"
-mypy-extensions = "^0.4.3"
 bandit = "^1.7.4"
-safety = "^1.10.3"
-pytest = "^6.2.5"
-pylint = "^2.13.9"
-pydocstyle = "^6.1.1"
-pre-commit = "^2.19.0"
+black = "^21.12b0"
+darglint = "^1.8.1"
 flake8 = "^3.9.2"
+httpretty = "^1.1.4"
+isort = { extras = ["colors"], version = "^5.10.1" }
 jupyter = "^1.0.0"
 jupyterlab = "^3.4.2"
-httpretty = "^1.1.4"
-pytest-cov = "^3.0.0"
+mypy = "^0.910"
+mypy-extensions = "^0.4.3"
+pre-commit = "^2.19.0"
+pydocstyle = "^6.1.1"
+pylint = "^2.13.9"
+pytest = ">=7.1.2"
+pytest-cov = ">=3.0.0"
+pyupgrade = "^2.32.1"
+safety = "^1.10.3"
 
 [tool.black]
 # https://github.com/psf/black
