--- a/.github/workflows/python-install.yml
+++ b/.github/workflows/python-install.yml
@@ -2,7 +2,6 @@ name: Python install
 
 on:
   push:
-  pull_request:
 
 jobs:
   build:
@@ -25,7 +24,7 @@ jobs:
           poetry install
       - name: Test with pytest
         run: |
-          pytest --cov=giskard tests --cov-report=xml
+          python -m pytest --cov=giskard tests --cov-report=xml
       - name: Build
         run: |
           poetry build
