--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build ML Worker image
         env:
           TAG: dev
-        run: make docker-build
+        run: make docker-build-nocache
 
       - name: Login to Docker registry
         uses: docker/login-action@v2
