--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ authors = ["Giskard AI <hello@giskard.ai>"]
 license = "Apache Software License 2.0"
 repository = "https://github.com/Giskard-AI/giskard-client"
 homepage = "https://github.com/Giskard-AI/giskard-client"
+include = ["giskard/ml_worker/generated/*"]
 
 # Keywords description https://python-poetry.org/docs/pyproject/#keywords
 keywords = [
@@ -44,19 +45,13 @@ classifiers = [
 python = ">=3.7.1,<3.11"
 cloudpickle = "^2.1.0"
 importlib_metadata = { version = "^4.11.4" }
-ipywidgets = "^7.7.0"
-jupyter-http-over-ws = "^0.0.8"
 numpy = "^1.21.6"
 pandas = "^1.3.5"
 pydantic = "^1.9.1"
-python-dotenv = "^0.17.1"
 requests-toolbelt = "^0.9.1"
 scikit-learn = "^1.0.2"
-types-requests = "^2.27.30"
-typing-extensions = "^3.10.0.2"
 zstandard = "^0.15.2"
 mixpanel = "^4.9.0"
-# ---------------------ML WORKER deps-------------------------
 alibi = { extras = ["shap"], version = "^0.7.0" }
 beautifulsoup4 = "^4.11.1"
 eli5 = "^0.13.0"
@@ -64,12 +59,18 @@ great-expectations = "^0.15.17"
 grpcio = "^1.46.3"
 grpcio-status = "^1.46.3"
 protobuf = "^3.9.2"
-shap = "^0.40.0"
 tenacity = "^8.1.0"
 python-daemon = "^2.3.1"
-black = "^22.8.0"
+click = "^8.1.3"
+lockfile = "^0.12.2"
+psutil = "^5.9.2"
+requests = "^2.28.1"
+tqdm = "^4.64.1"
+setuptools = "^65.4.1"
 
 [tool.poetry.group.dev.dependencies]
+typing-extensions = "^3.10.0.2"
+black = "^22.8.0"
 bandit = "^1.7.4"
 darglint = "^1.8.1"
 flake8 = "^3.9.2"
@@ -83,12 +84,12 @@ pylint = "^2.13.9"
 pytest = ">=7.1.2"
 pyupgrade = "^2.32.1"
 safety = "^1.10.3"
-setuptools = "^65.4.1"
 grpcio-tools = "^1.46.3"
 mypy-protobuf = "^3.2.0"
 pytest-cov = "^3.0.0"
 mypy-extensions = "^0.4.3"
 mypy = "^0.982"
+deptry = "^0.5.13"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.1.2"
