--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -17,14 +17,13 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install poetry
-          poetry install
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+      - name: Make
+        run: make
       - name: Test with pytest
         run: |
           .venv/bin/pytest --cov=giskard tests --cov-report=xml
       - name: Build
         run: |
-          poetry build
+          make build
