--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -12,18 +12,22 @@ jobs:
         python-version: [ "3.7", "3.8", "3.9", "3.10" ]
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
+
       - name: Make
         run: make
-      - name: Test with pytest
-        run: |
-          .venv/bin/pytest --cov=giskard tests --cov-report=xml
+
       - name: Build
         run: |
           make build
