do not redeploy when not needed

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -42,6 +42,7 @@ jobs:
         run: make docker-push
 
       - name: Invoke deployment hook
+        if: ${{ steps.extract_branch.outputs.branch == 'main' }}
         run: |
           curl -L --silent --max-time 900 ${{ secrets.TEST_SERVER_WEBHOOK_URL_BASE }}/redeploy-dev 
 
