--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ classifiers = [
 
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<3.11"
+python = ">=3.7.5,<3.11"
 cloudpickle = "^2.1.0"
 importlib_metadata = { version = "^4.11.4" }
 numpy = "^1.21.6"
@@ -55,7 +55,6 @@ mixpanel = "^4.9.0"
 alibi = { extras = ["shap"], version = "^0.7.0" }
 beautifulsoup4 = "^4.11.1"
 eli5 = "^0.13.0"
-great-expectations = "^0.15.17"
 grpcio = "^1.46.3"
 grpcio-status = "^1.46.3"
 protobuf = "^3.9.2"
@@ -67,6 +66,7 @@ psutil = "^5.9.2"
 requests = "^2.28.1"
 tqdm = "^4.64.1"
 setuptools = "^65.4.1"
+scipy = "^1.7.3"
 
 [tool.poetry.group.dev.dependencies]
 typing-extensions = "^3.10.0.2"
