--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,6 @@ pandas = "^1.3.5"
 pydantic = "^1.9.1"
 requests-toolbelt = "^0.9.1"
 scikit-learn = "^1.0.2"
-zstandard = "^0.15.2"
 mixpanel = "^4.9.0"
 alibi = { extras = ["shap"], version = "^0.7.0" }
 beautifulsoup4 = "^4.11.1"
@@ -66,7 +65,8 @@ psutil = "^5.9.2"
 requests = "^2.28.1"
 tqdm = "^4.64.1"
 setuptools = "^65.4.1"
-scipy = "^1.7.3"
+zstandard = "^0.18.0"
+scipy = ">=1.7.2,<1.8"
 
 [tool.poetry.group.dev.dependencies]
 typing-extensions = "^3.10.0.2"
