--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,11 +45,11 @@ classifiers = [
 python = ">=3.7.5,<3.11"
 cloudpickle = "^2.1.0"
 importlib_metadata = { version = "^4.11.4" }
-numpy = "^1.21.6"
+numpy = ">=1.21.6,<1.22.0"
 pandas = "^1.3.5"
 pydantic = "^1.9.1"
 requests-toolbelt = "^0.9.1"
-scikit-learn = "^1.0.2"
+scikit-learn = ">=1.0.0,<1.1.0"
 mixpanel = "^4.9.0"
 alibi = { extras = ["shap"], version = "^0.7.0" }
 beautifulsoup4 = "^4.11.1"
@@ -65,7 +65,7 @@ psutil = "^5.9.2"
 requests = "^2.28.1"
 tqdm = "^4.64.1"
 setuptools = "^65.4.1"
-zstandard = "^0.18.0"
+zstandard = "^0.15.2"
 scipy = ">=1.7.2,<1.8"
 
 [tool.poetry.group.dev.dependencies]
