replaced alibi by barebone shap

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,6 @@ pydantic = "^1.9.1"
 requests-toolbelt = "^0.9.1"
 scikit-learn = ">=1.0.0,<1.1.0"
 mixpanel = "^4.9.0"
-alibi = { extras = ["shap"], version = "^0.7.0" }
 beautifulsoup4 = "^4.11.1"
 eli5 = "^0.13.0"
 grpcio = "^1.46.3"
@@ -67,6 +66,7 @@ tqdm = "^4.64.1"
 setuptools = "^65.4.1"
 zstandard = "^0.15.2"
 scipy = ">=1.7.2,<1.8"
+shap = "^0.41.0"
 
 [tool.poetry.group.dev.dependencies]
 typing-extensions = "^3.10.0.2"
@@ -81,17 +81,16 @@ jupyterlab = "^3.4.2"
 pre-commit = "^2.19.0"
 pydocstyle = "^6.1.1"
 pylint = "^2.13.9"
-pytest = ">=7.1.2"
 pyupgrade = "^2.32.1"
 safety = "^1.10.3"
 grpcio-tools = "^1.46.3"
 mypy-protobuf = "^3.2.0"
-pytest-cov = "^3.0.0"
 mypy-extensions = "^0.4.3"
 mypy = "^0.982"
 deptry = "^0.5.13"
 
 [tool.poetry.group.test.dependencies]
+pytest-cov = "^3.0.0"
 pytest = "^7.1.2"
 catboost = "^1.1"
 
