--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -36,5 +36,5 @@ jobs:
       - name: Archive built artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: dist
-          path: dist
+          name: giskard-dev-${{ matrix.python-version }}.whl
+          path: dist/*whl
