--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -32,3 +32,9 @@ jobs:
       - name: Build
         run: |
           make build
+
+      - name: Archive built artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: giskard-dev-${{ matrix.python-version }}.whl
+          path: dist/*whl
