--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ml-worker-proto"]
 	path = ml-worker-proto
-	url = ../ml-worker-proto.git
+	url = git@github.com:Giskard-AI/ml-worker-proto.git
