--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -23,6 +23,13 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Cache virtual environment
+        uses: actions/cache@v3
+        with:
+          path: .venv
+          key: ${{ runner.os }}-venv-${{ matrix.python-version }}-${{ hashFiles('poetry.lock')}}
+          restore-keys: ${{ runner.os }}-venv-${{ matrix.python-version }}
+
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
