--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,3 @@
-sonar.projectKey=giskard-client
+sonar.projectKey=Giskard-AI_giskard-client
+sonar.organization=giskard
 sonar.python.coverage.reportPaths=coverage.xml
