more sonar params

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
 sonar.projectKey=Giskard-AI_giskard-client
 sonar.organization=giskard
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.tests=tests
+sonar.sources=giskard
