more sonar params

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=Giskard-AI_giskard-client
 sonar.organization=giskard
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.sources=giskard
+sonar.tests=tests
