--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -42,5 +42,7 @@ jobs:
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
+        with:
+          projectBaseDir: $GITHUB_WORKSPACE
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
