--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -36,6 +36,12 @@ jobs:
       - name: Make
         run: make
 
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+
       - name: Build
         run: |
           make build
