--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -36,11 +36,13 @@ jobs:
       - name: Make
         run: make
 
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
+      - name: Setup sonarqube
+        uses: warchant/setup-sonar-scanner@v3
+      - name: Run sonarqube
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
+        run: sonar-scanner
+          -Dsonar.host.url=https://sonarcloud.io
 
       - name: Build
         run: |
