--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
+sonar.host.url=https://sonarcloud.io
 sonar.projectKey=Giskard-AI_giskard-client
 sonar.organization=giskard
 sonar.python.coverage.reportPaths=coverage.xml
