install libraries required by demo projects

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -56,9 +56,14 @@ RUN bash -c "if [ $INSTALL_DEV == 'true' ] ; then poetry install --no-root ; els
 
 
 
+# catboost, torch and transformers are required for demo projects
+RUN pip install  \
+    catboost==1.0.6  \
+    torch==1.12.0 \
+    transformers==4.20.1
 # ------------------------------------------------------------------------
 # Add your python dependencies here, for example
-# RUN poetry add catboost transformers "tensorflow^2.9.1"
+# RUN pip install catboost transformers "tensorflow^2.9.1"
 # ------------------------------------------------------------------------
 
 
