added download step

--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -47,3 +47,9 @@ jobs:
       - name: Build
         run: |
           make build
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist
+
