--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -44,7 +44,14 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      - name: Build
+      - name: Set dev version
+        uses: ciiiii/toml-editor@1.0.0
+        with:
+          file: "pyproject.toml"
+          key: "tool.poetry.version"
+          value: ${{ format('0.dev{0}', GITHUB_RUN_ID)}}
+
+      - name: Build dev version
         run: |
           make build
 
