Added git to pyproject, -s option takes now an argument. Resolved branches errors. Resolved asked changements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ scikit-learn = ">=1.0.0,<1.1.0"
 mixpanel = "^4.9.0"
 beautifulsoup4 = "^4.11.1"
 eli5 = "^0.13.0"
+git = "3.1.29"
 grpcio = "^1.46.3"
 grpcio-status = "^1.46.3"
 protobuf = "^3.9.2"
