--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -13,6 +13,11 @@ jobs:
         python-version: [ "3.7", "3.8", "3.9", "3.10" ]
 
     steps:
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
+
       - name: Checkout code
         uses: actions/checkout@v3
         with:
@@ -45,6 +50,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
       - name: Extract current package version
+        if: ${{ steps.extract_branch.outputs.branch == 'main' }}
         uses: SebRollen/toml-action@v1.0.1
         id: read_toml
         with:
@@ -52,11 +58,13 @@ jobs:
           field: 'tool.poetry.version'
 
       - name: Get current date
+        if: ${{ steps.extract_branch.outputs.branch == 'main' }}
         id: current_date
         run: echo "CURRENT_DATE=$(date '+%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
 
 
       - name: Set dev version
+        if: ${{ steps.extract_branch.outputs.branch == 'main' }}
         uses: ciiiii/toml-editor@1.0.0
         with:
           file: "pyproject.toml"
@@ -68,6 +76,7 @@ jobs:
           make build
 
       - name: Archive built artifacts
+        if: ${{ steps.extract_branch.outputs.branch == 'main' }}
         uses: actions/upload-artifact@v3
         with:
           name: giskard-dev-${{ matrix.python-version }}.whl
