--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - andrey/docker-buildx
   pull_request:
     branches:
       - main
@@ -18,15 +19,19 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@master
+        with:
+          platforms: amd64,arm64
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@master
+
       - name: Extract branch name
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
-
-      - name: Build ML Worker image
-        env:
-          TAG: dev
-        run: make docker-build-nocache
 
       - name: Login to Docker registry
         uses: docker/login-action@v2
@@ -35,16 +40,18 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push ML Worker image to Docker registry
-        if: ${{ steps.extract_branch.outputs.branch == 'main' }}
+      - name: Build and push
+        uses: docker/bake-action@master
         env:
           TAG: dev
-        run: make docker-push
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
 
-      - name: Invoke deployment hook
-        if: ${{ steps.extract_branch.outputs.branch == 'main' }}
-        run: |
-          curl -L --silent --max-time 900 ${{ secrets.TEST_SERVER_WEBHOOK_URL_BASE }}/redeploy-dev 
+#      - name: Invoke deployment hook
+#        if: ${{ steps.extract_branch.outputs.branch == 'main' }}
+#        run: |
+#          curl -L --silent --max-time 900 ${{ secrets.TEST_SERVER_WEBHOOK_URL_BASE }}/redeploy-dev
 
       - name: Remove containers and volumes
         run: docker system prune -a -f
