--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build-image:
-    runs-on: ubuntu-latest-8core
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -25,7 +25,6 @@ jobs:
           platforms: amd64,arm64
 
       - name: Set up Docker Buildx
-        id: buildx
         uses: docker/setup-buildx-action@master
 
       - name: Extract branch name
@@ -45,16 +44,15 @@ jobs:
         env:
           TAG: dev
         with:
-          builder: ${{ steps.buildx.outputs.name }}
           push: true
           set: |
             *.platform=linux/amd64
             *.platform=linux/arm64
 
-#      - name: Invoke deployment hook
-#        if: ${{ steps.extract_branch.outputs.branch == 'main' }}
-#        run: |
-#          curl -L --silent --max-time 900 ${{ secrets.TEST_SERVER_WEBHOOK_URL_BASE }}/redeploy-dev
+      - name: Invoke deployment hook
+        if: ${{ steps.extract_branch.outputs.branch == 'main' }}
+        run: |
+          curl -L --silent --max-time 900 ${{ secrets.TEST_SERVER_WEBHOOK_URL_BASE }}/redeploy-dev
 
       - name: Remove containers and volumes
         run: |
