--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - andrey/docker-buildx
   pull_request:
     branches:
       - main
@@ -19,13 +18,17 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@master
-        with:
-          platforms: amd64,arm64
-
       - name: Set up Docker Buildx
+        id: builder
         uses: docker/setup-buildx-action@master
+
+      - name: "Append ARM buildx builder from AWS"
+        uses: baschny/append-buildx-action@v1
+        with:
+          builder: ${{ steps.builder.outputs.name }}
+          endpoint: ssh://${{ secrets.ARM_SSH_CONNECTION_STRING }}
+          ssh_private_key: ${{ secrets.ARM_SSH_PRIVATE_KEY }}
+
 
       - name: Extract branch name
         shell: bash
@@ -34,7 +37,7 @@ jobs:
 
       - name: Login to Docker registry
         uses: docker/login-action@v2
-#        if: ${{ steps.extract_branch.outputs.branch == 'main' }}
+        if: ${{ steps.extract_branch.outputs.branch == 'main' }}
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -44,10 +47,11 @@ jobs:
         env:
           TAG: dev
         with:
-          push: true
+          push: ${{ steps.extract_branch.outputs.branch == 'main' }}
           set: |
             *.platform=linux/amd64
             *.platform=linux/arm64
+      
 
       - name: Invoke deployment hook
         if: ${{ steps.extract_branch.outputs.branch == 'main' }}
