--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -18,15 +18,22 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Set up Docker Buildx
+        id: builder
+        uses: docker/setup-buildx-action@master
+
+      - name: "Append ARM buildx builder from AWS"
+        uses: baschny/append-buildx-action@v1
+        with:
+          builder: ${{ steps.builder.outputs.name }}
+          endpoint: ssh://${{ secrets.ARM_SSH_CONNECTION_STRING }}
+          ssh_private_key: ${{ secrets.ARM_SSH_PRIVATE_KEY }}
+
+
       - name: Extract branch name
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
-
-      - name: Build ML Worker image
-        env:
-          TAG: dev
-        run: make docker-build-nocache
 
       - name: Login to Docker registry
         uses: docker/login-action@v2
@@ -35,18 +42,25 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push ML Worker image to Docker registry
-        if: ${{ steps.extract_branch.outputs.branch == 'main' }}
+      - name: Build and push
+        uses: docker/bake-action@master
         env:
           TAG: dev
-        run: make docker-push
+        with:
+          push: ${{ steps.extract_branch.outputs.branch == 'main' }}
+          set: |
+            *.platform=linux/amd64
+            *.platform=linux/arm64
+      
 
       - name: Invoke deployment hook
         if: ${{ steps.extract_branch.outputs.branch == 'main' }}
         run: |
-          curl -L --silent --max-time 900 ${{ secrets.TEST_SERVER_WEBHOOK_URL_BASE }}/redeploy-dev 
+          curl -L --silent --max-time 900 ${{ secrets.TEST_SERVER_WEBHOOK_URL_BASE }}/redeploy-dev
 
       - name: Remove containers and volumes
-        run: docker system prune -a -f
+        run: |
+          docker system prune -a -f
+          docker builder prune --force --keep-storage=10GB
 
 
